# ido

./: .env.example  .gitignore  README.md  ido  pyproject.toml  render.yaml
adapters/blender/ido_blender/: client.py  harness.py  state.py  trace_timeline.py  ui.py
backend/: airbyte_exporter.py  clickhouse_exporter.py  composio_exporter.py  config.py  guild_exporter.py  integrations.py  main.py  openscad_service.py  openui_exporter.py  request_context.py  sponsor_exports.py  sponsor_insights.py
backend/providers/: factory.py  fallback.py  openai_provider.py  pioneer_provider.py
companion/: __init__.py  cli.py  pet.py  platforms.py
packaging/: README.md  ido.spec  windows.iss
scripts/: blender_render.py  blender_smoke.py
shared/: contracts.py
site/: index.html
tests/: test_airbyte_exporter.py  test_api.py  test_blender_adapter.py  test_blender_harness.py  test_clickhouse_exporter.py  test_composio_exporter.py  test_furniture.py  test_guild_exporter.py  test_integrations.py  test_openscad.py  test_openscad_sponsors.py  test_openui_exporter.py  test_pioneer_provider.py  test_providers.py  test_sponsor_insights.py  test_trace_timeline.py
web/: eslint.config.js  index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
