[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-agent"
version = "0.1.0"
description = "Tool-agnostic Engineering IR backend and Blender adapter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.75,<3",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
packaging = [
  "PyInstaller>=6.12,<7",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
]
sponsors = [
  "composio>=0.9",
]

[project.scripts]
ido = "companion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "shared", "companion", "adapters"]

[tool.hatch.build]
artifacts = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
